Archive2/30/556068144063f4/output
main.cpp:34:42: error: template-id 'operator[]<>' for 'char& boost::shared_ptr<Buffer>::operator[](std::ptrdiff_t) const' does not match any template declaration
 template <> array_access< Buffer >::type boost::shared_ptr<Buffer>::operator[] ( std::ptrdiff_t i ) const
                                          ^
main.cpp:34:101: note: saw 1 'template<>', need 2 for specializing a member function template
 template <> array_access< Buffer >::type boost::shared_ptr<Buffer>::operator[] ( std::ptrdiff_t i ) const
                                                                                                     ^
